src/styles/_variables.scss
$primary: hsla(347, 49%, 18%, 1);
$primary-lighter: hsla(12, 57%, 34%, 1);
$secondary: hsla(28, 98%, 48%, 1);
$secondary-inverted: hsla(54, 91%, 96%, 1);
$white: #dcdcdc;
$white-calmer: #c4c4c4;
$white-brighter: #f5f5f5;
$select: #00A300;

$full-screen-height: 100vh;
$half-screen-height: 50vh;

$full-screen-width: 100vw;
$half-screen-width: 50vw;

